<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/movie_menu"
        android:icon="@drawable/ic_movie_24dp"
        android:title="@string/movie" />

    <item
        android:id="@+id/tvshow_menu"
        android:icon="@drawable/ic_tv_24dp"
        android:title="@string/tv_show" />

    <item
        android:id="@+id/favorite_menu"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/favorite_menu" />

</menu>