...
        android:id="@+id/movie_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_detail_hover">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
...
