<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="movie_title">Movie Title</string>
    <string name="poster">poster</string>
    <string name="movie_rating">Rating: %1$s/10</string>
    <string name="movie_duration">%1$s Minutes</string>
    <string name="movie_popularity">Popularity: %1$s</string>
    <string name="movie_date">Release</string>
    <string name="movie_description">Movie Description</string>
    <string name="overview">OVERVIEW</string>
    <string name="movie_genres">Genres</string>
    <string name="poster_backdrop">Poster Backdrop</string>
    <string name="no_data">No data added yet</string>
    <string name="timeout">Request Timeout</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="duration">Duration</string>
    <string name="add_favorite">Tambahkan ke Favorite</string>
    <string name="favorite_menu">Favorite</string>
    <string name="remove_favorite">Hapus Dari Favorite</string>
</resources>
